# Pseudo3DShooter

./: .gitignore  CMakeLists.txt  README.md
resources/: data.json
resources/levels/: level1.json
src/: FontManager.cpp  FontManager.hpp  Game.cpp  Game.hpp  InputHandler.cpp  InputHandler.hpp  SurfaceManager.cpp  SurfaceManager.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
src/json/: Parser.cpp  Parser.hpp  StateParser.cpp  StateParser.hpp  WorldParser.cpp  WorldParser.hpp
src/managers/: BitmapManager.cpp  BitmapManager.hpp  BulletHandler.cpp  BulletHandler.hpp  CollisionManager.cpp  CollisionManager.hpp  FontManager.cpp  FontManager.hpp  SoundManager.cpp  SoundManager.hpp  SurfaceManager.cpp  TextureManager.cpp  TextureManager.hpp
src/objects/: AnimatedObject.cpp  AnimatedObject.hpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  Gun.cpp  Gun.hpp  HealthStatus.cpp  HealthStatus.hpp  Heart.cpp  Heart.hpp  LoaderParams.hpp  Map.cpp  Map.hpp  MenuButton.cpp  MenuButton.hpp  Player.cpp  Player.hpp  PlayerBullet.cpp  PlayerBullet.hpp  Sprite.cpp  Sprite.hpp  StaticObject.cpp  StaticObject.hpp  TextObject.cpp  TextObject.hpp  Vector2D.hpp  World.cpp  World.hpp  WorldObject.cpp  WorldObject.hpp
src/states/: AboutState.cpp  AboutState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  GameStateMachine.cpp  GameStateMachine.hpp  LevelState.cpp  LevelState.hpp  MainMenuState.cpp  MainMenuState.hpp  MenuState.cpp  MenuState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.hpp  StateParser.cpp  StateParser.hpp
(+7 files in other folders)
