CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Game)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin/)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLASH} -W)

FILE(GLOB_RECURSE TD_SOURCE_FILES src/*.cpp)
ADD_EXECUTABLE(Game ${TD_SOURCE_FILES})
INCLUDE_DIRECTORIES(src/)

FILE(MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/resources/)
ADD_CUSTOM_COMMAND(TARGET Game PRE_BUILD
    COMMAND ${CMAKE_COMMAND} -E remove_directory ${PROJECT_SOURCE_DIR}/bin/resources/
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources/ ${PROJECT_SOURCE_DIR}/bin/resources/)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image)
TARGET_LINK_LIBRARIES(Game ${SDL2_LIBRARIES})
TARGET_LINK_LIBRARIES(Game ${SDL2IMAGE_LIBRARIES})
TARGET_COMPILE_FEATURES(Game PUBLIC cxx_constexpr)
